# apple-music-readme

./: README.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py
api/templates/: card.html.j2
templates/: card.html.j2
