[project]
name = ""
version = "0.0.1"
dependencies = [
    "black==22.10.0",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "click==8.1.3",
    "flask==2.2.2",
    "gunicorn==20.1.0",
    "idna==3.4",
    "importlib-metadata==5.1.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.1",
    "mypy-extensions==0.4.3",
    "pathspec==0.10.2",
    "platformdirs==2.5.4",
    "python-dotenv==0.21.0",
    "requests==2.28.1",
    "tomli==2.0.1",
    "typing-extensions==4.4.0",
    "urllib3==1.26.13",
    "werkzeug==2.2.2",
    "zipp==3.10.0",
]

[tool.uv]
package = false
